--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Hey, this is Kunqian Zhu's blog."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,24 +15,28 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>Stay hungry , Stay Foolish<br>
+    </p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
-
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
-
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
-    <p></p>
-    
-    <h5>Talks</h5>
-
+    <p>亲爱的朋友，我是<strong> 朱坤乾 </strong>你能来到这里我非常开心！这是我的利用 GitHub Pages 与 Jekyll 搭建的 个人博客。</p>
+    <p>你可以和我讨论JAVA和Python等相关的问题，也可以与我谈天论地。 </p>
+	<p>我喜欢<a href="url">书籍</a>，<a href="url">音乐</a>，<a href="url">电影</a>，<a href="url">动漫</a></p>
+	<p>我崇拜马云，追随Taylor Swift</p>
+	<p>我希望世界和平，All is well</p>
+	<p>如果有HR感觉有合适岗位的,可以发我邮箱.</p>
+	
+	<h5>教育</h5>
+	<ul>
+				<li> 本科 </li>
+	</ul>
+    <h5>链接</h5>
     <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
+        <li><a href="https://github.com/Zhukqian">GitHub</a> 这里会有我的代码</li>
+		<li><a href="">公众号</a> 这里会有我的小世界</li>
+        <li><a href="">CSDN</a> 这里会有我的教程</li>	
+        <li><a href="">知乎</a>  这里会有我的思想</li> 
+		<li><a href="">简书</a> 这里会有我的生活</li>
+		
     </ul>
 </div>
 
