--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ header-img: "img/post-bg-rwd.jpg"
 	</ul>
     <h5>链接</h5>
     <ul>
-        <li><a href="https://github.com/Zhukqian">GitHub</a> 这里会有我的代码</li>
+        <li><a href="">GitHub</a> 这里会有我的代码</li>
 		<li><a href="">公众号</a> 这里会有我的小世界</li>
         <li><a href="">CSDN</a> 这里会有我的教程</li>	
         <li><a href="">知乎</a>  这里会有我的思想</li> 
