--- a/about.html
+++ b/about.html
@@ -111,11 +111,11 @@ header-img: "img/post-bg-rwd.jpg"
 <div id="gitalk-container"></div>
     <script type="text/javascript">
     var gitalk = new Gitalk({
-    clientID: '{{site.gitalk.clientID}}',
-    clientSecret: '{{site.gitalk.clientSecret}}',
-    repo: '{{site.gitalk.repo}}',
-    owner: '{{site.gitalk.owner}}',
-    admin: ['{{site.gitalk.admin}}'],
+    clientID: '{{7d13c1dd93e70b21bd8b}}',
+    clientSecret: '{{797f5155a708f900c236a2d62ff96ebc34411003}}',
+    repo: '{{Zhukqian.github.io}}',
+    owner: '{{Zhukqian}}',
+    admin: ['{{Zhukqian}}'],
     distractionFreeMode: {{site.gitalk.distractionFreeMode}},
     id: 'about',
     });
