--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@ header-img: "img/post-bg-rwd.jpg"
     owner: '{{Zhukqian}}',
     admin: ['{{Zhukqian}}'],
     distractionFreeMode: {{site.gitalk.distractionFreeMode}},
-    id: 'about',
+    id: 'window.location.pathname',
     });
     gitalk.render('gitalk-container');
 </script>
